# Auto_Sort

./: .gitignore  CMakeLists.txt  ImageUtils.cpp  ImageUtils.h  LICENSE  README.md  detecting.cpp  detecting.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  motor_control.cpp  motor_control.h  object_detect.cpp  object_detect.h  thread_motor.cpp  thread_motor.h
Google_tests/: CMakeLists.txt  detection_test.cpp
detection/: ImageUtils.cpp  ImageUtils.h  detecting.cpp  detecting.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  object_detect.cpp  object_detect.h
motor/: CMakeLists.txt  motor.cpp  motor.h  motorDriver.cpp  motorDriver.h  motor_control.cpp  motor_control.h  thread_motor.cpp  thread_motor.h
unit_tests/: detection_test.cpp  motor_test.cpp  unit_test.cpp
